<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Giskaland</string>
    <string name="action_settings">Settings</string>

    <!-- Tmp text -->
    <string name="tmpText">Hér kemur mynd af Giska</string>
    <string name="tmpGamesText">Leikir og þrautir</string>

    <!-- Difficulty levels -->
    <string name="firstLevel">4 - 5 ára</string>
    <string name="secondLevel">6 - 7 ára</string>
    <string name="thirdLevel">8 - 9 ára</string>

    <!-- Games, just example -->
    <string name="gameOne">Leikur 1</string>
    <string name="gameTwo">Leikur 2</string>

    <string name="gameMath">Stærðfræði</string>
    <string name="MathLevel3direction">Reiknaðu margföldun eða deilingu og settu inn rétt svar og smelltu á Reikna</string>
    <string name="MathLevel2direction">Reiknaðu plús eða mínus og smelltu á rétt svar</string>
    <string name="MathLevel1direction">Teldu hluti og veldu rétt tölustaf</string>
    <string name="gameBrainPuzzle">Spurningarleikurinn</string>
    <string name="SpellThePic">Hvernig á að skrifa</string>
    <string name="Firstletter">Hvað er fyrsti stafurinn</string>
    <string name="SpellThePicEnglish">Hvernig á að skrifa á ensku</string>
    <string name="WhatLetter">Stafaleikurinn</string>

    <string name="returnback">TIL BAKA</string>
    <string name="title_activity_four_year">4-5 ára</string>
    <string name="hello_world">Hello world!</string>
    <string name="a_string">Hello world!</string>
    <string name="title_activity_second_level">6-7 ára</string>
    <string name="title_activity_third_level">8-9 ára</string>

    <string name="title_activity_math">Stærðfræði</string>
    <string name="title_activity_spelling">Stafaleikur</string>
    <string name="title_activity_quiz">Spurningaleikur</string>

    <string name="title_activity_math_level_1">Stærðfræði 4-5 ára</string>
    <string name="title_activity_math__level_2">Stærðfræði 6-7 ára</string>
    <string name="title_activity_math__level_3">Stærðfræði 8-9 ára</string>
    <string name="title_activity_spelling_level_1">Stafaleikur 4-5 ára</string>
    <string name="title_activity_spelling_level_2">Stafaleikur 6-7 ára</string>
    <string name="title_activity_spelling_level_3">Stafaleikur 8-9 ára</string>
    <string name="title_activity_quiz__level_2">Spurningaleikur 6-7 ára</string>
    <string name="title_activity_quiz__level_3">Spurningaleikur 8-9 ára</string>

    <string name="score">Stig : </string>
    <string name="Answer">Reikna</string>
    <string name="Ans">0</string>
    <string name="Clear">Þurrka</string>
    <string name="newQ">Ný spurning</string>
    <string name="title_activity_test_db_manager">TestDbManager</string>
    <string name="title_activity_spelling_game_two">SpellingGameTwo</string>

    <string name="Mathlvl3Placeholder">Svara</string>
    <string name="title_activity_quiz_game">QuizGame</string>
    <string name="title_activity_spelling_game_tree">spelling_game_tree</string>

</resources>
