<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@drawable/bak1"
    tools:context="gl.giskaland.FirstLevel">

    <!-- Temporary text view -->
    <TextView
        android:id="@+id/tmpGamesText"
        android:text="@string/tmpGamesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="70sp"
        android:layout_marginTop="188dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <!-- Some games, example, no onclick -->

    <ImageButton
        android:id="@+id/buttonMathLevel1"
        android:text="@string/gameMath"
        style="@style/button_style"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:layout_above="@+id/buttonMathLevel1"
        android:src="@drawable/stae"
        android:paddingBottom="20dp"
        android:paddingTop="80dp" />

    <ImageButton
        android:id="@+id/buttonWhatLetter"
        android:text="@string/SpellThePic"
        style="@style/button_style"
        android:layout_below="@+id/buttonMathLevel1"
        android:background="@android:color/transparent"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:src="@drawable/staf"
        />

</RelativeLayout>